- Absolute Positioning removed from AddToCart-Button and min-height added to avoid overlapping of description, custom fields, prices and cart button. - css added for products_horizon.php for a horizontal view with 100% width regardless of products per row. vmAccess for FE added automatic empty Option for customfields.
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/trunk/virtuemart@8951 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/components/com_virtuemart/assets/css/vm-ltr-common.css
+++ b/components/com_virtuemart/assets/css/vm-ltr-common.css
@@ -221,7 +221,7 @@ button, .button {padding: 4px 6px;border: 1px solid #666;background-color: #f5ff
 }
 
 .vm-col-3 {
-  width: 31.914893614%;
+  width: 31.9%;
 }
 
 .vm-col-4 {
